--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,5 +1,9 @@
 @import url("/assets/css/reset.css");
 @import url("/assets/css/global.css");
+@import url("/assets/css/components/_navigator.css");
+@import url("/assets/css/components/_pills.css");
+@import url("/assets/css/components/_link-button.css");
+@import url("/assets/css/components/_gallery.css");
 
 .s-wrapper {
   display: flex;
@@ -7,76 +11,88 @@
   flex-flow: row nowrap;
 }
 
+.s-wrapper video {
+  position: fixed;
+  width: 100%;
+}
+
 .s-wrapper .s-left-column {
   width: 100px;
   height: 100%;
-  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.s-wrapper .s-right-column {
-  width: 100%;
-  height: 100%;
-  background-color: gray;
-  padding-left: 30px;
-}
-
-.navigator {
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  position: relative;
-}
-
-.navigator ul li {
-  margin: 60px 0;
-}
-
-.navigator ul li:first-child {
-  margin-top: 0;
-}
-
-.navigator ul li:last-child {
-  margin-bottom: 0;
-}
-
-.navigator ul li a {
-  color: white;
-  width: 45px;
-  height: 45px;
-  border: 2px solid white;
-  border-radius: 50%;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.navigator::before {
-  content: "";
-  position: absolute;
+  position: fixed;
+  padding-right: 50px;
+  left: 0;
   top: 0;
-  width: 2px;
-  height: 100%;
-  background-color: white;
-  z-index: 0;
-}
-
-.navigator ul {
   z-index: 1;
 }
 
-.navigator ul li a:hover,
-.navigator ul li a:active {
-  color: var(--primary-color);
-  background-color: white;
+.s-wrapper .s-main-content {
+  width: 100%;
+  height: 100%;
+  padding-left: 130px;
+  position: relative;
 }
 
-.navigator .navigator__icon {
-  position: absolute;
-  top: -20px;
+.s-wrapper .s-main-content__top {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.s-wrapper .s-main-content__bottom {
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.s-wrapper .s-main-content .s-logo img {
+  margin-top: 50px;
+  margin-left: 0;
+  margin-bottom: 30px;
+}
+
+.s-wrapper .s-main-content__top .s-description {
+  background-color: rgba(0, 0, 0, 0.7);
+  max-width: 50%;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.s-wrapper .s-main-content__top .s-description .s-description__text {
+  color: white;
+  line-height: 170%;
+}
+
+.s-wrapper .s-main-content__top .s-description .pills {
+  margin-bottom: 20px;
+}
+
+.s-wrapper .s-main-content .s-links {
+  padding: 20px;
+  padding-left: 0;
+}
+
+.s-wrapper .s-main-content .s-links ul {
+  display: flex;
+  flex-direction: row;
+}
+
+.s-spiderman-01-01 {
+  background-image: url("/assets/images/spiderman-tobey/movie-01/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-01-02 {
+  background-image: url("/assets/images/spiderman-tobey/movie-02/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-01-03 {
+  background-image: url("/assets/images/spiderman-tobey/movie-03/background.png");
+  background-size: cover;
 }
