--- a/assets/css/components/_navigator.css
+++ b/assets/css/components/_navigator.css
@@ -29,6 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
 }
 
 .navigator::before {
