--- a/assets/css/internal-all.css
+++ b/assets/css/internal-all.css
@@ -1,83 +1,89 @@
 @import url("/assets/css/reset.css");
 @import url("/assets/css/global.css");
-@import url("/assets/css/components/_navigator.css");
+@import url("/assets/css/components/_navigator-all.css");
 @import url("/assets/css/components/_pills.css");
 @import url("/assets/css/components/_link-button.css");
 @import url("/assets/css/components/_gallery.css");
 
 .s-wrapper {
   display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+.s-wrapper .s-page-wrapper {
+  display: flex;
   height: 100vh;
   flex-flow: row nowrap;
 }
 
-.s-wrapper video {
+.s-page-wrapper video {
   position: fixed;
   min-width: 100%;
   min-height: 100%;
 }
 
-.s-wrapper .s-left-column {
+.s-page-wrapper .s-left-column {
+  min-width: 100px;
   width: 100px;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
+  background-color: black;
 }
 
-.s-wrapper .s-main-content {
+.s-page-wrapper .s-main-content {
   width: 100%;
   height: 100%;
-  padding-left: 130px;
+  padding-left: 30px;
   position: relative;
 }
 
-.s-wrapper .s-main-content__top {
+.s-page-wrapper .s-main-content__top {
   height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.s-wrapper .s-main-content__bottom {
+.s-page-wrapper .s-main-content__bottom {
   height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
-.s-wrapper .s-main-content .s-logo img {
+.s-page-wrapper .s-main-content .s-logo img {
   margin-top: 50px;
   margin-left: 0;
   margin-bottom: 30px;
 }
 
-.s-wrapper .s-main-content__top .s-description {
+.s-page-wrapper .s-main-content__top .s-description {
   background-color: rgba(0, 0, 0, 0.7);
   max-width: 50%;
   padding: 20px;
   border-radius: 10px;
 }
 
-.s-wrapper .s-main-content__top .s-description .s-description__text {
+.s-page-wrapper .s-main-content__top .s-description .s-description__text {
   color: white;
   line-height: 170%;
 }
 
-.s-wrapper .s-main-content__top .s-description .pills {
+.s-page-wrapper .s-main-content__top .s-description .pills {
   margin-bottom: 20px;
 }
 
-.s-wrapper .s-main-content .s-links {
+.s-page-wrapper .s-main-content .s-links {
   padding: 20px;
   padding-left: 0;
 }
 
-.s-wrapper .s-main-content .s-links ul {
+.s-page-wrapper .s-main-content .s-links ul {
   display: flex;
   flex-direction: row;
 }
@@ -94,5 +100,30 @@
 
 .s-spiderman-01-03 {
   background-image: url("/assets/images/spiderman-tobey/movie-03/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-02-01 {
+  background-image: url("/assets/images/spiderman-andrew/movie-01/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-02-02 {
+  background-image: url("/assets/images/spiderman-andrew/movie-02/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-03-01 {
+  background-image: url("/assets/images/spiderman-tom/movie-01/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-03-02 {
+  background-image: url("/assets/images/spiderman-tom/movie-02/background.png");
+  background-size: cover;
+}
+
+.s-spiderman-03-03 {
+  background-image: url("/assets/images/spiderman-tom/movie-03/background.png");
   background-size: cover;
 }
