--- a/assets/css/components/_gallery.css
+++ b/assets/css/components/_gallery.css
@@ -1,4 +1,6 @@
 .gallery {
+  display: flex;
+  height: 100%;
   padding: 20px;
   padding-left: 0;
 }
@@ -9,6 +11,7 @@
 }
 
 .gallery ul li {
+  display: flex;
   margin-left: 25px;
 }
 
@@ -17,6 +20,8 @@
 }
 
 .gallery ul li a img {
+  max-width: 100%;
+  max-height: 100%;
   border: solid 6px white;
   border-radius: 15px;
   transition: border-color 0.25s ease-in-out;
