--- a/assets/css/internal-all.css
+++ b/assets/css/internal-all.css
@@ -1,9 +1,9 @@
-@import url("/assets/css/reset.css");
-@import url("/assets/css/global.css");
-@import url("/assets/css/components/_navigator-all.css");
-@import url("/assets/css/components/_pills.css");
-@import url("/assets/css/components/_link-button.css");
-@import url("/assets/css/components/_gallery.css");
+@import url("../../assets/css/reset.css");
+@import url("../../assets/css/global.css");
+@import url("../../assets/css/components/_navigator-all.css");
+@import url("../../assets/css/components/_pills.css");
+@import url("../../assets/css/components/_link-button.css");
+@import url("../../assets/css/components/_gallery.css");
 
 .s-wrapper {
   display: flex;
@@ -107,42 +107,42 @@
 }
 
 .s-spiderman-01-01 {
-  background-image: url("/assets/images/spiderman-tobey/movie-01/background.png");
+  background-image: url("../../assets/images/spiderman-tobey/movie-01/background.png");
   background-size: cover;
 }
 
 .s-spiderman-01-02 {
-  background-image: url("/assets/images/spiderman-tobey/movie-02/background.png");
+  background-image: url("../../assets/images/spiderman-tobey/movie-02/background.png");
   background-size: cover;
 }
 
 .s-spiderman-01-03 {
-  background-image: url("/assets/images/spiderman-tobey/movie-03/background.png");
+  background-image: url("../../assets/images/spiderman-tobey/movie-03/background.png");
   background-size: cover;
 }
 
 .s-spiderman-02-01 {
-  background-image: url("/assets/images/spiderman-andrew/movie-01/background.png");
+  background-image: url("../../assets/images/spiderman-andrew/movie-01/background.png");
   background-size: cover;
 }
 
 .s-spiderman-02-02 {
-  background-image: url("/assets/images/spiderman-andrew/movie-02/background.png");
+  background-image: url("../../assets/images/spiderman-andrew/movie-02/background.png");
   background-size: cover;
 }
 
 .s-spiderman-03-01 {
-  background-image: url("/assets/images/spiderman-tom/movie-01/background.png");
+  background-image: url("../../assets/images/spiderman-tom/movie-01/background.png");
   background-size: cover;
 }
 
 .s-spiderman-03-02 {
-  background-image: url("/assets/images/spiderman-tom/movie-02/background.png");
+  background-image: url("../../assets/images/spiderman-tom/movie-02/background.png");
   background-size: cover;
 }
 
 .s-spiderman-03-03 {
-  background-image: url("/assets/images/spiderman-tom/movie-03/background.png");
+  background-image: url("../../assets/images/spiderman-tom/movie-03/background.png");
   background-size: cover;
 }
 
