--- a/assets/css/components/pills.css
+++ b/assets/css/components/pills.css
@@ -1,17 +1,19 @@
 .pills ul {
   display: flex;
   flex-direction: row;
+  gap: 16px;
 }
 
 .pills ul li {
   background-color: var(--primary-color);
   color: white;
   padding: 5px 15px;
-  margin: 0 10px;
   border-radius: 20px;
   text-transform: uppercase;
 }
 
-.pills ul li:first-child {
-  margin-left: 0;
+@media screen and (max-width: 600px) {
+  .pills ul {
+    flex-direction: column;
+  }
 }
