--- a/assets/css/internal-all.css
+++ b/assets/css/internal-all.css
@@ -26,8 +26,9 @@
 }
 
 .s-page-wrapper .s-left-column {
-  min-width: 100px;
-  width: 100px;
+  min-width: 50px;
+  max-width: 100px;
+  width: 20vw;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -42,63 +43,48 @@
 }
 
 .s-page-wrapper .s-main-content__top {
-  height: 80vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  height: 80vh;
 }
 
 .s-page-wrapper .s-main-content__bottom {
-  height: 20vh;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  height: 20vh;
 }
 
-.s-page-wrapper .s-main-content .s-logo img {
-  max-width: 860px;
+.s-page-wrapper .s-main-content__top .s-logo img {
+  max-width: 95%;
   margin-top: 36px;
-  margin-left: 0;
-  margin-bottom: 30px;
 }
 
 .s-page-wrapper .s-main-content__top .s-middle-content {
   display: flex;
-  justify-content: center;
-  height: 100%;
   flex-direction: column;
-  margin-bottom: 30px;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .s-page-wrapper .s-main-content__top .s-description {
   background-color: rgba(0, 0, 0, 0.7);
-  max-width: 50%;
-  margin-left: 20px;
+  max-width: 600px;
+  margin-right: 16px;
   padding: 20px;
   border-radius: 10px;
 }
 
 .s-page-wrapper .s-main-content__top .s-description .s-description__text {
-  color: white;
   line-height: 170%;
 }
 
-.s-description .s-description__text p {
-  font-size: 18px;
-}
-
-.s-description .s-description__text p strong {
-  font-size: 18px;
-}
-
 .s-page-wrapper .s-main-content__top .s-description .pills {
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .s-page-wrapper .s-main-content .s-links {
-  margin-left: 30px;
-  padding: 20px;
-  padding-left: 0;
+  padding: 16px;
 }
 
 .s-page-wrapper .s-main-content .s-links ul {
