--- a/assets/css/components/navigator.css
+++ b/assets/css/components/navigator.css
@@ -61,3 +61,9 @@
   position: absolute;
   top: -20px;
 }
+
+@media screen and (max-height: 540px) {
+  .navigator ul li {
+    margin: 24px;
+  }
+}
