--- a/assets/css/internal-all.css
+++ b/assets/css/internal-all.css
@@ -189,3 +189,13 @@
     justify-content: flex-start;
   }
 }
+
+@media screen and (max-height: 540px) {
+  .s-page-wrapper .s-main-content {
+    justify-content: start;
+  }
+
+  .s-page-wrapper .s-main-content__top .s-middle-content {
+    justify-content: start;
+  }
+}
